[package]
name = "rusttracer"
version = "0.1.0"
authors = ["Hugo Tunius <h@tunius.se>", "Andrew Aylett <andrew@aylett.co.uk>"]

[dependencies]
image = "*"
time="0.1"
rayon="0.6.0"
tobj="0.1.5"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0"
getopts = "0.2.4"
clippy={version = "*", optional = true}
toml="0.4"

[features]
default = []

stats = []
