[package]
name = "rusttracer"
version = "0.1.0"
authors = ["Hugo Tunius <h@tunius.se>", "Andrew Aylett <andrew@aylett.co.uk>"]

[dependencies]
image = "*"
rayon="1.3.0"
tobj="1.0.0"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0"
getopts = "0.2.4"
clippy={version = "*", optional = true}
toml="0.5"

[features]
default = []

stats = []
