[package]
name = "rusttracer"
version = "0.1.0"
authors = ["Hugo Tunius <h@tunius.se>", "Andrew Aylett <andrew@aylett.co.uk>"]
edition = "2021"

[dependencies]
image = "0.25"
rayon = "1"
tobj = "4.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
getopts = "0.2.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = []

stats = []
